added abstract and part of intro

--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,3 +1,11 @@
 ## Abstract {.page_break_before}
 
-
+Accurate small molecule force fields are crucial for predicting thermodynamic and kinetic properties of drug-like molecules in biomolecular systems.
+Torsion parameters, in particular, are essential for determining conformational distribution of molecules.
+However, they are usually fit to computational expensive quantum chemical torsion scans and generalize poorly to different chemical environments.
+Torsion parameters should ideally capture local through-space non-bonded interactions such as 1-4 steric and electrostatics and non-local through-bond effects such as conjugation and hyperconjugation.
+Non-local through-bond effects are sensitive to remote substituents and are a contributing factor to torsion parameters poor transferability.
+Here we show that fractional bond orders such as the Wiberg Bond Order (WBO) are sensitive to remote substituents and correctly captures extent of conjugation and hyperconjugation.
+We show that the relationship between WBO and torsion barrier heights are linear and can therefore serve as a surrogate to QC torsion barriers, and to interpolate torsion force constants.
+Using this approach we can reduce the number of computational expensive QC torsion scans needed while maintaining accurate torsion parameters.
+We demonstrate this approach to a set of substituted benzene rings.
