--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -8,58 +8,39 @@ These free parameters in these functionals are fit to reproduce experimental and
 
 ### 1.1 The torsion functional describes the potential energy of internal rotation
 
-The torsion functional which models internal rotation is particularly challenging to parameterize and the least transferable relative to other bonded terms for several reasons [CITE].
-First, torsion parameters are usually fit to computationally expensive QC torsion scans which introduces a bottle neck to setting up simulations.
-Second, torsion parameters are 'soft' or very flexible degrees of freedom compared to bond and angle parameters [CITE].
-Relatively small variations to the torsional potential surface can strongly influence molecular conformation distributions [CITE].
-Given how critical torsion parameters ar in determining conformation distributions in simulations, it is prudent for them to be accurately parameterized.
-Third, torsion potentials can be strongly influenced by distal substituents, an effect very difficult to represent in a force field that uses only local chemistry to define parameters.
-When parameterizing a molecular system, the force field assigns atom types, or a description of the atom's atomic number and chemical environment to every atom in the system [CITE].
-These atom types are generally defined by their local chemical environment.
-A torsion type is defined by the atom types of the four atoms involved in the torsion.
-These non-local through-bond effects are difficult to capture with local torsion types and is a contributing factor to torsion parameters' poor transferability.
-
-In most force fields (CHARMM [CITE], AMBER [CITE], OPLS [CITE]) the torsion potential is given by a truncated Fourier series:
+In most force fields (CHARMM [@doi:10.1002/jcc.540040211], AMBER [@doi:10.1021/ja00124a002], OPLS [@doi:10.1021/ja9621760]) the torsion potential is given by a truncated Fourier series:
 
 $$ E_{torions} = \sum_{torsions}\sum_{n=1}^N K_{\phi, n}(1 + cos(n\phi_i - \delta_n)) $${#eq:torsion}
 
 where the sum is over torsion angles $\phi$ and multiplicities $n$.
 The force constants $K_{\phi, n} determine the barrier heights, the multiplicities $n$ determine the number of minima and the phase angles $\delta_{\phi, n} determines the phase.
-In most force fields the $N$ can go up to 6 and the phase angles $\delta$ are usually set to $0^{\circ}$ or $180^{\circ}$ to symmetrize the curve around $0^{\circ}$.
+In most force fields the $N$ can go up to 6 and the phase angles $\delta$ are usually set to $0^{\circ}$ or $180^{\circ}$ to symmetrize the curve around $0^{\circ}$ [@doi:10.1007/s00894-008-0305-0].
 
-The torsion energy about a bond is determined by a combination of local and non-local effects from conjugation, hypercojugation, sterics, and electrostatics [CITE].
+The torsion energy about a bond is determined by a combination of local and non-local effects from conjugation, hypercojugation, sterics, and electrostatics [@doi:10.1021/acs.jcim.9b00585; @doi:10.1021/acs.jcim.7b00645; @doi:10.1038/35079036; @doi:10.1021/jp046290d].
 Steric and elecrostatic interactions are, in principle, accounted for by non bonded terms in most force fields, so a torsion profile would ideally primarily capture conjugation or hyperconjugation effects, and only the 1-4 electrostatics.
-However, conjugation and hyperconjugation are non local properties and remote chemical changes can influence the extent of conjugation and/or hyperconjugation.
-These effects are not always captured by existing, locally defined torsion types.
 
-Discuss how previous work dealt with this problem
+The torsion functional which models internal rotation is particularly challenging to parameterize and the least transferable relative to other bonded terms for several reasons [@doi:10.1186/s13321-019-0371-6;  doi:10.1021/ct500573f; @doi:10.1021/ct4003477; @doi:10.1021/acs.jcim.9b00585].
+First, torsion parameters are usually fit to computationally expensive QC torsion scans which introduces a bottle neck to setting up simulations.
+Second, torsion parameters are 'soft' or very flexible degrees of freedom compared to bond and angle parameters.
+Relatively small variations to the torsional potential surface can strongly influence molecular conformation distributions [@doi:10.1021/ct4003477].
+Given how critical torsion parameters are in determining conformation distributions in simulations, it is prudent for them to be accurately parameterized.
+Third, torsion potentials can be strongly influenced by distal substituents due to changes in conjugation or hypercojugation, an effect very difficult to represent in a force field that uses only local chemistry to define parameters [CITE fragmenter paper].
+When parameterizing a molecular system, the force field assigns atom types, or a description of the atom's atomic number and chemical environment to every atom in the system [@doi:10.1002/jcc.24244; @doi:10.1021/ci300363c].
+The reason atom types are used is to allow transferability of parameters to other atoms in similar chemical environments.
+A torsion type is defined by the quartet of atom types of the four atoms involved in the torsion [@doi:10.1002/jcc.21367; @doi:10.1002/jcc.20035].
+However, these atom types are generally defined by their local chemical environment which leads to locally defined torsion types.
+Therefore, non-local through-bond effects such as conjugation and hypercojugation are difficult to capture.
+The inability of traditional torsion types to capture such effects and the torsion energy profile's sensitivity distal chemical changes are contributing factors to torsion parameters' poor transferability.
+
+To address this issue of poor parameter transferability, many practitioners have employed bespoke parameterization where parameters are fit to a specific molecule.
+Many automatic and semi-automatic tools exist to generate such bespoke paraemters such as GAMMP [cite], ffTK [cite], Paramfit [cite], and QUBEKit [@doi:10.1021/acs.jcim.8b00767].
+When only a few molecules need to be parameterized, these tools are very useful for aiding researchers in setting up molecular systems in a systematic and reproducible way.
+However, the paraemters generated from such tools are not meant to be generalizable and are not practical when many molecules need to be paraemterized.
+Another approach to overcome this lack of transferability is to add new atom types to adequately capture torsion profiles [@doi:10.1021/ci4001597].
+However, these new atom types are generally added in an unsystematic way and leads to a proliferation of other force field terms [@doi:10.1021/acs.jctc.8b00640].
+Atom-type independent approaches (SMIRNOFF and Montessier)
 
 ### 1.2 Fractional bond orders describe the extent of bonding between two atoms
-
-
-An MM force field first assigns each atom in the system an atom type, or a description of the atom's atomic number and chemical environment [@doi:10.1038/natrevmats.2015.4; @doi:10.1021/ci300363c].
-This reduces the number of parameters needed to describe the system because parameters developed for one atom can be transferred to other atoms in similar chemical environments.
-
-Bond-stretching and angle-bending terms are considered 'hard' degrees of freedom [@doi:10.1021/acs.jcim.8b00042] which means their associated force constants are large and small deviations from $b_0$ and $\theta_0$ will result in large changes in the potential energy.
-Therefore, bond and angle terms are straight forward to parameterize.
-They have historically been fit to vibrational frequency, crystallographic and microwave data [@doi:10.1007/s10822-018-0111-4; @doi:10.1021/ja00431a045].
-QC data have also been used to fit these terms [@doi:10.1021/ja00431a045].
-Parameterizing the torsion dihedral-angle term is less trivial and are the least transferable relative to other bonded terms [@doi:10.1186/s13321-019-0371-6; @doi:10.1021/ct4003477].
-The torsion angle is a 'soft' or very flexible degree of freedom and relatively small variations to the torsional potential energy surface can strongly influence molecular conformation distributions.
-Given how critical torsion parameters are in determining conformation distributions in simulations, it is prudent for them to be accurately parameterized.
-
-
-The torsion energy functional (equation  \ref{eq:torsion}) used to describe the energy of internal rotation of molecules is given as a sum of cosines.
-In equation @eq:torsion, the torsion angle $\phi$ is the angle between the two planes formed by the 1, 2, 3 and 2, 3, 4 atoms of four sequentially bonded atoms.
-$K_{\phi, n}$ is the torsion force constant which determines the energy barrier height, $n$ is the multiplicity which determines the number of minima and maxima in the curve, and $\delta$ is phase angle which determines the shift shift.
-The maximum value for $n$ ranges from 3 to 6, depending on the force field. These parameters are usually fit to computationally expensive QC torsion scans.
-
-
-The physical motivation for the torsion term is to include quantum orbital effects that contribute to resistance to rotations of conjugated and higher multiplicity bonds [@doi:10.26434/chemrxiv.8279681.v1].
-The multiplicity terms, $n$, are chosen based on chemical intuition to reproduce the periodic nature of the torsion profile involved.
-In reality, the torsion energy about a central bond is determined by a combination of effects that are difficult to separate; 1-4 non-bonded interactions, through-space steric and electrostatic interactions of atoms beyond the 1-4 atoms in the torsion, and electronic delocalization such as conjugation and hypercojugation [@doi:10.1038/35079036; @doi:10.1021/jp046290d; @doi:10.1021/acs.jcim.7b00645; @doi:10.1021/acs.jcim.9b00585].
-
-## 2.2 Fractional bond orders
 
 In quantum mechanics, a molecule is a system of particles - nuclei and electrons. Chemists, however, think of molecules as atoms held together by bonds.
 The connectivity graph of molecules is a very important mental model in chemistry, based on centuries of chemical observations and knowledge.
@@ -72,4 +53,18 @@ overlap between atoms. Many other definitions have been proposed; a non-exhausti
 Pauling \cite{Pauling1935}, Coulson \cite{Coulson1939}, Mulliken \cite{Mulliken1955}, Mayer \cite{Mayer2007}, Jug \cite{Jug1977}, Politzer \cite{Politzer1969}, atomic overlap matrix
 bond order \cite{Cioslowski1991}, natural resonance theory bond order \cite{Glendening1998}, Nalewajksi-Mrozek bond order \cite{Nalewajski1994},
 effective bond order \cite{Roos2007}, natural localized molecular orbital bond order \cite{Reed1990}, delocalization index \cite{Bader1975}, and fuzzy bond order \cite{Mayer2004}. Here, we compare the Wiberg and Mayer bond orders.
+
+### 1.3 Atom-type independent force fields
+
+
+
+
+SMIRNOFF avoids this issue by using SMARTS patterns to replace atom types and avoid table look-ups.
+SMARTS patterns can be created at different levels of granualarity for torsion types without worrying about proliferation of other force field terms
+Noteworthy work from Champion and Wei has shown that using rules of types of conjugation and electron richness or deficiency of aromatic rings can be used
+to predict torsion energy barriers without the need to directly fit torsion parameters.
+Here we combine these ideas by using the WBOs, a relatively simple and cheap quantity that comes for free from an AM1BCC calculation used to generate partial charges to interpolate torsion force constants.
+First we show that WBOs are a good indicator of the electron density around the central bond and is linearly related to torsion barrier heights.
+Then we show that it is possible to use this relationship to interpolate torsion force constants for the same torsion type in different chemical environments.
+Lastly, we use a data-driven approach to generate SMARTS patterns for the needed torsion types and demonstrate this approach on a set of substituted phenyl rings.
 
