added WBO analysis

--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -38,33 +38,26 @@ When only a few molecules need to be parameterized, these tools are very useful 
 However, the paraemters generated from such tools are not meant to be generalizable and are not practical when many molecules need to be paraemterized.
 Another approach to overcome this lack of transferability is to add new atom types to adequately capture torsion profiles [@doi:10.1021/ci4001597].
 However, these new atom types are generally added in an unsystematic way and leads to a proliferation of other force field terms [@doi:10.1021/acs.jctc.8b00640].
-Atom-type independent approaches (SMIRNOFF and Montessier)
+
+Atom type independent force fields seek to overcome both the proliferation of force field terms and transferability by moving away from using atom types.
+The SMIRNOFF force field [@doi:10.1021/acs.jctc.8b00640] uses SMARTS patterns for direct chemical perception to replace atom types and avoid table look-ups.
+In the context of torsion types, the SMIRNOFF format allows one to create a new SMARTS pattern for a torsion type without the need to introduce new atom types.
+These SMARTS patterns can be created at different levels of granualarity for torsion types without worrying about proliferation of other force field terms.
+The Hyperconjugation for Torsional Energy Quantification (H-TEQ) [@doi:10.1021/acs.jcim.6b00012; @doi:10.1021/acs.jcim.9b00581; 10.1021/acs.jcim.9b00585] approach uses
+chemical principles of conjugation, hyperconjugation, and electronegativity of the atoms involved in the torsion to model torsion energies without the need to directly fit torsion parameters.
+In this study we combine these two approaches by using the Wiberg Bond Order (WBO), a measure of electron population overlap between atoms in a bond, and
+SMARTS torsion types to interpolate torsion force field parameters.
 
 ### 1.2 Fractional bond orders describe the extent of bonding between two atoms
 
-In quantum mechanics, a molecule is a system of particles - nuclei and electrons. Chemists, however, think of molecules as atoms held together by bonds.
-The connectivity graph of molecules is a very important mental model in chemistry, based on centuries of chemical observations and knowledge.
-Many quantum chemists such as Pauling \cite{Pauling1935}, Coulson \cite{Coulson1939}, Mulliken \cite{Mulliken1955}, Wiberg \cite{Wiberg1968}, and Mayer \cite{Mayer2007} have worked on bridging the gap between the physical and chemical conception of atoms in molecules by an \textit{a poteriori} analysis of the wave function to arrive at a fractional bond order that is consistent with the chemical concept of the multiplicity of a chemical bond.
-In this thesis (Chapters 2 and 3) I show how informative the Wiberg bond order, calculated from a cheap AM1 wave function, is for solving several outstanding problems in classical force field development.
-
-The WBO is just one form of quantum mechanical electron density based bond order calculations that
-aims to quantify the chemical bond, a key concept in chemistry, by computing the electron population
-overlap between atoms. Many other definitions have been proposed; a non-exhaustive list includes
-Pauling \cite{Pauling1935}, Coulson \cite{Coulson1939}, Mulliken \cite{Mulliken1955}, Mayer \cite{Mayer2007}, Jug \cite{Jug1977}, Politzer \cite{Politzer1969}, atomic overlap matrix
-bond order \cite{Cioslowski1991}, natural resonance theory bond order \cite{Glendening1998}, Nalewajksi-Mrozek bond order \cite{Nalewajski1994},
-effective bond order \cite{Roos2007}, natural localized molecular orbital bond order \cite{Reed1990}, delocalization index \cite{Bader1975}, and fuzzy bond order \cite{Mayer2004}. Here, we compare the Wiberg and Mayer bond orders.
-
-### 1.3 Atom-type independent force fields
-
-
-
-
-SMIRNOFF avoids this issue by using SMARTS patterns to replace atom types and avoid table look-ups.
-SMARTS patterns can be created at different levels of granualarity for torsion types without worrying about proliferation of other force field terms
-Noteworthy work from Champion and Wei has shown that using rules of types of conjugation and electron richness or deficiency of aromatic rings can be used
-to predict torsion energy barriers without the need to directly fit torsion parameters.
-Here we combine these ideas by using the WBOs, a relatively simple and cheap quantity that comes for free from an AM1BCC calculation used to generate partial charges to interpolate torsion force constants.
+In quantum mechanics, a molecule is a system of individual particles without explicit bonds - nuclei and electrons.
+Chemists, however, think of molecules as atoms held together by bonds.
+The connectivity graph of molecules is a very important mental model in chemistry, based on centuries of chemical observations and knowledge that chemists employ when thinking about molecules.
+Many quantum chemists such as Pauling [@doi:10.1021/ja01315a105], Coulson [@doi:10.1098/rspa.1939.0006], Mulliken [@doi:10.1063/1.1740588],
+Wiberg [@doi:10/fvwkkh], and Mayer [@doi:10/b5m8r5], Jug [@doi:10.1021/ja00466a009], Politzer [@doi:10.1063/1.1671457] have worked on bridging the gap between the physical and chemical conception of atoms in molecules by an \textit{a posteriori} analysis of the wave function to arrive at a fractional bond order that is consistent with the chemical concept of the multiplicity of a chemical bond.
+Given that these quantities try to make that connection, it is not surprising that fractional bond orders captures important, chemical properties that can be useful in many applications, specifically force field parameterization.
+Indeed, In the MMP2 [@doi:10.1002/jcc.540080504], MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r] force fields, a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length, bond force constants and twofold torsional force constants
+Here we use the Wiberg Bond Order (WBO), a relatively simple and cheap quantity that comes for free from an AM1BCC calculation used to generate partial charges to interpolate torsion force constants.
 First we show that WBOs are a good indicator of the electron density around the central bond and is linearly related to torsion barrier heights.
 Then we show that it is possible to use this relationship to interpolate torsion force constants for the same torsion type in different chemical environments.
 Lastly, we use a data-driven approach to generate SMARTS patterns for the needed torsion types and demonstrate this approach on a set of substituted phenyl rings.
-
