--- a/content/03.results-and-discussion.md
+++ b/content/03.results-and-discussion.md
@@ -2,7 +2,7 @@
 
 ### 2.1 Torsion energy barriers are sensitive to the chemical environment which can be influenced by remote substituents
 
-In most forcefields, torsions are defined by the quartet of atoms types involved in the dihedral [@doi:10.1021/ja00315a051; @doi:10.1021/ja00124a002; @doi:10.1002/jcc.540040211; @doi:10.1021/ja9621760].
+In most force fields, torsions are defined by the quartet of atoms types involved in the dihedral [@doi:10.1021/ja00315a051; @doi:10.1021/ja00124a002; @doi:10.1002/jcc.540040211; @doi:10.1021/ja9621760].
 Atom types encode chemical environments of atoms that usually only incorporate the local environment.
 However, the quartet of atom types do not always capture all relevant chemistry, especially when the effects are nonlocal; atoms contributing to hyperconjugation, delocalization, or other nonclassical effects may not be part of the quartet involved in the torsion yet can influence the torsion profile [@doi:10.1186/s13321-019-0371-6].
 In particular, with conjugated systems, distal electron-donating or -withdrawing substituents can exert a strong effect on torsional barrier height.
@@ -16,9 +16,9 @@ For the others, the lowest energy conformer is at $180^{\circ}$.
 In the neutral molecule, the slightly out-of-plane conformer is preferred to accommodate the proximal hydrogens.
 In the other cases, the increasing double-bond character of the conjugated central bond (shown for the zwitterion in Figure @fig:biphenyls B) makes the planar conformer preferred.
 
-This trend poses problems to generalized torsion forcefield parametrization.
-Most general forcefields consider the central bond in all tautomers equally rotatable so their MM torsion profiles are all the same (Figure @fig:biphenyls, D), while the QC scan clearly shows that they are not.
-This illustrates one of the fundamental limits of atom types in classical forcefields:
+This trend poses problems to generalized torsion force field parametrization.
+Most general force fields consider the central bond in all tautomers equally rotatable so their MM torsion profiles are all the same (Figure @fig:biphenyls, D), while the QC scan clearly shows that they are not.
+This illustrates one of the fundamental limits of atom types in classical force fields:
 At what point in this series should a new atom type be introduced?
 In this case, remote changes three bonds away from the torsion central bond gradually perturbed the conjugated bond from being highly rotatable to non-rotatable as the conjugation increased.
 
@@ -123,6 +123,7 @@ The trends are similar for other kinase inhibitors examined, as shown in SI Figu
 
 #### 2.3.3 Electronically least-interacting functional group (ELF) method provides a useful way to capture informative conformation-independent WBOs
 
+`[Note: Change these distributions to be over subsituted phenyl set?]`{.yellow}.
 ![**Standard deviations of conformation-dependent WBO distributions are smaller than standard deviations of WBO distribution of the same bond in different chemical environments.**
 The distribution of standard deviations of WBO distributions over conformations is shown in blue.
 The distribution of standard deviations of ELF10 WBO distributions for the same bond in different chemical environments is shown in pink.
@@ -133,7 +134,7 @@ The pink standard deviation distribution was calculated over 366 distributions o
 As we have shown, the WBO is conformation-dependent and this dependency can also be highly informative of the electronic couplings within a system.
 Figure @fig:standard_deviations shows the distribution of standard deviations of the conformation-dependent WBO distribution in blue.
 Most of the standard deviations fall below 0.03, which is encouragingly small.
-However, it can become computationally expensive to calculate the WBO for all conformations; if we aim to use WBOs as a surrogate to determine if our fragment is representative of the parent molecule in a reproducible way, we need a way to capture informative conformation-independent WBOs.
+However, it can become computationally expensive to calculate the WBO for all conformations; if we aim to use WBOs as a descriptor for torsion barrier heights in a reproducible way, we need a way to capture informative conformation-independent WBOs.
 The Electronically Least-interacting Functional groups (ELF) conformation selection scheme implemented in the OpenEye Toolkit `quacpac` module [@url:https://docs.eyesopen.com/applications/quacpac/index.html] resolves the issue of sensitivity of molecular mechanics electrostatic energies from QC derived charges.
 
 The ELF10 method begins with a large set of conformers for the molecule.
@@ -180,8 +181,7 @@ We then calculated the AM1 ELF10 WBO for the bond attaching the functional group
 Figure @fig:substituted_phenyls, A) for all functional groups which resulted in 133 (26 * 5 + 3) WBOs for each functional group in different chemical environments.
 This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes, defined as a change more than two bonds away, from other effects such as sterics and conformations.
 The resulting distributions are in Figure @fig:substituted_phenyls, B.
-(Details on generating and accessing this set are provided in Section 5.3.2 in the Detailed Methods.)
-
+(Details on generating and accessing this set are provided in Section `[hold]`{.red} in the Detailed Methods.)
 
 It is interesting to note that the trend of decreasing WBOs for more electron donating groups are anticorrelates with increasing Hammett substituent constants.
 In SI Figure @fig:hammett, the AM1 ELF10 WBOs of the bonds between the functional group and benzoic acid are plotted against their Hammett meta and para substituent constants (values were taken from Hansch et al. [@doi:10.1021/cr00002a004]).
@@ -225,10 +225,13 @@ We chose the representative molecules for the 17 functional groups by sorting th
 All of the resulting QC torsion scans are shown in SI Figures @fig:phenyl_td_1, @fig:phenyl_td_2, @fig:phenyl_td_3, @fig:phenyl_td_4, @fig:phenyl_td_5.
 Table @tbl:stats lists the slopes and associated statistics for the fitted lines.
 
+When we compare the standard deviations of WBO distributions with respect to conformation versus with respect to changes in chemical space (Figure @fig:standard_deviations, pink distribution), we find that the changes in ELF10 WBO for remote chemical environment changes are usually bigger than the changes in WBO that arise from change in conformation.
+This allows us to use ELF10 WBOs as a good surrogate to changes the chemical environment that is reflected in QC torsion scans.
+
 #### 2.3.5 Conformation-dependent WBOs differentiate between though-space and through-bond non-local effects on QC torsion scans
 
 We show representative series of torsion scans in Figure @fig:sub_phenyl_qc_scan and the corresponding conformation-dependant WBO at each conformation in the scan.
-A QC torsion scan contains contributions of through-bond effects such as conjugation and / or hyperconjugation and through-space effects such as sterics and electrostatics interactions \cite{Wei2019,Liu2018,Goodman2005}.
+A QC torsion scan contains contributions of through-bond effects such as conjugation and / or hyperconjugation and through-space effects such as sterics and electrostatics interactions [@doi:10.1021/acs.jcim.9b00585; 10.1021/jp046290d].
 In this section we show how WBOs can be used to characterize through-space and through-space effects in QC torsion scans.
 
 As a molecule is rotated about its bond to generate a QC torsion scan, changes in conjugation and / or hyperconjugation, the conformation of the rest of the molecule, and non-local, through-space interactions contribute to the potential energy surface that is then used to fit MM torsion parameters.
@@ -239,8 +242,8 @@ In this section we characterize steric and conjugation and / or hyperconjugation
 Below is a summary of these observations from the subsituted phenyl torsion scans.
 
 1. When QC torsion scans are anti-correlated with conformation-dependent WBOs calculated for conformations in the scan, differences in QC torsion scans for the same torsion types in different chemical environments are a result of non-local, through-bond effects.
-   If changes in QC torsion scans are not accompanied by highly anti-correlated WBOs, the changes are due to non-local, through-space, effects
-2. When AM1 ELF10 WBOs do not obey the trend found in \cite{Stern2020} of the linear relationship with torsion barrier height for the same torsion type in different chemical environments, they are generally caused by non-local, through-space interactions.
+2. If changes in QC torsion scans are not accompanied by highly anti-correlated WBOs, the changes are due to non-local, through-space, effects
+3. When AM1 ELF10 WBOs do not obey the trend found in Figure @fig:substituted_phenyls of the linear relationship with torsion barrier height for the same torsion type in different chemical environments, they are generally caused by non-local, through-space interactions.
 
 ![**Wiberg bond orders are anticorrelated with QC torsion scans.**
 **[A]** Selected series of molecules with central torsion bonds connecting the nitro group to the phenyl ring highlighted and labeled with AM1 ELF10 WBOs.
@@ -253,73 +256,74 @@ this series have WBO that are anti-correlated with their QC torsion scan. Pearso
 **[E]** Same as **A** but with urea at the X~1~ position.
 **[F]** Same as **B** but for urea in a series of different chemical environment. Both profiles and
 energy barriers change with AM1 ELF10 WBOs. In addition, the grey scan has higher energy barriers than the olive scan but its ELF10 WBO is lower.
-**[G]** Same as **[C]** but for urea. Here, the WBO scans all have the same profiles while the QC torsion scan does not.
+**[G]** Same as **C** but for urea. Here, the WBO scans all have the same profiles while the QC torsion scan does not.
 **[H]** Same as **D** but here the WBO scans are not always anti-correlated or not as strongly anti-correlated.
-The WBO scan profiles do not change because the changes in the QC torsion scan captures spatial effects while the WBO scans capture conjugation.](images/example_scans.svg){#fig:sub_phenyl_qc_scan}
+The WBO scan profiles do not change because the changes in the QC torsion scan captures spatial effects while the WBO scans capture conjugation.
+**[I]** Same as **A** with amino at the X~1~ position.
+**[J]** Same as **B** but for amino in different chemical environments. While the gold scan is symmetric around 0^$\circ$^, the red
+and blue scan are not. The Blue scan is shifted and the red scan has a higher barrier on one side.
+**[K]** Same as **C** but for amino. Here the WBO scans are anticorrelated with the QC torsion scans even if the QC scans have different profiles.
+**[L]** Same as **D** but for amino. Here the WBO scans are atnicorrelted with the QC torsion scans.(images/example-scans.svg){#fig:sub_phenyl_qc_scan}
 
-\FIG{example-scans} shows three series of QC torsion scans for the same torsion type in different chemical environments to illustrate this.
-\FIG{example-scans} A, E and I show three torsion types (nitro, urea and amino) in different chemical environments with their associated AM1 ELF10 WBO.
-\FIG{example-scans} B, F, and J show their QC torsion scans, \FIG{example-scans} C, G, and K show their conformation-dependent WBOs along the torsion scan, and \FIG{example-scans} D, H, and L show the correlations between conformer energies and their conformer-dependent WBOs.
+Figure @fig:sub_phenyl_qc_scan shows three series of QC torsion scans for the same torsion type in different chemical environments to illustrate this.
+Figure @fig:sub_phenyl_qc_scan A, E and I show three torsion types (nitro, urea and amino) in different chemical environments with their associated AM1 ELF10 WBO.
+Figure @fig:sub_phenyl_qc_scan B, F, and J show their QC torsion scans, @fig:sub_phenyl_qc_scan C, G, and K show their conformation-dependent WBOs along the torsion scan, and @fig:sub_phenyl_qc_scan D, H, and L show the correlations between conformer energies and their conformer-dependent WBOs.
 
-\FIG{example-scans} A-D show what is generally the expected behavior of QC torsion scans for the same torsion types in different chemical environments as shown in the previous chapter \cite{Stern2020}.
-(\FIG{example-scans}, A and B).
-The QC torsion profiles in \FIG{example-scans}, B, are all the same, while the torsion barrier heights increase with increasing AM1 ELF10 WBOs.
-WBOs calculated at every point of the QC torsion scan generate a profile that is generally anti-correlated to QC torsion scans as shown in \FIG{example-scans}, C and D.
+Figure @fig:sub_phenyl_qc_scan A-D show what is generally the expected behavior of QC torsion scans for the same torsion types in different chemical environments as shown in @fig:substituted_phenyls.
+The QC torsion profiles in @fig:subsituted, B, are all the same, while the torsion barrier heights increase with increasing AM1 ELF10 WBOs.
+WBOs calculated at every point of the QC torsion scan generate a profile that is generally anti-correlated to QC torsion scans as shown in @fig:sub_phenyl_qc_scan, C and D.
 This is in line with chemical intuition.
 Increased conjugation is a result of increased electron population overlap which stabilizes conformations and decreases their energy.
 
 The second derivative of WBOs along a QC torsion scan also changes depending on how strongly the bond conjugates at its lowest energy conformation.
-For bonds with higher AM1 ELF10 WBOs (\FIG{example-scans}, A and E) which indicates increased conjugation, the rate of change in the WBO scans are higher than for the same torsion types in environments where the bond does not conjugate as strongly (\FIG{example-scans}, C and G).
+For bonds with higher AM1 ELF10 WBOs (Figure @fig:sub_phenyl_qc_scan, A and E) which indicates increased conjugation, the rate of change in the WBO scans are higher than for the same torsion types in environments where the bond does not conjugate as strongly (Figure @fig:sub_phenyl_qc_scan, C and G).
 This also makes sense with respect to chemical intuition.
 At high energy conformations, where electronic orbitals are not oriented to conjugate, WBOs of the same bond in different chemical environments will be closer to each other than at lower energy where electronic delocalization is also a function of long distance chemical changes.
 In other words, conjugation is disrupted similarly for the different chemical environment, but the extent of conjugation is different because of different remote substituents.
 
-\FIG{example-scans} E-H shows a different series of the same torsion type in different chemical environments.
+Figure @fig:sub_phenyl_qc_scan E-H shows a different series of the same torsion type in different chemical environments.
 There are several differences between this example and the example discussed in the previous paragraph.
-One, while the torsion types are equivalent for all four molecules shown in \FIG{example-scans} E, the QC torsion scans do not all have the same profile.
+One, while the torsion types are equivalent for all four molecules shown in Figure @fig:sub_phenyl_qc_scan E, the QC torsion scans do not all have the same profile.
 Relative heights of minima and maxima are different or new minima and maxima are observed.
-In addition, their corresponding conformation-dependent WBO scans are not as strongly anti-correlated with the torsion scans (\FIG{example-scans}, H) as in \FIG{example-scans} D.
-Interestingly, the WBO scans do all have similar profiles (\FIG{example-scans} G).
-In this example, the urea is a more bulky functional group than the nitro and amino group in Figures \FIG{example-scans} A and I.
-The red and grey molecules also have bulky groups at the meta position relative to the torsion being driven. This creates different steric clashes for the different molecules and changes their QC torsion profiles relative to each others.
+In addition, their corresponding conformation-dependent WBO scans are not as strongly anti-correlated with the torsion scans (Figure @fig:sub_phenyl_qc_scan, H) as in Figure @fig:sub_phenyl_qc_scan D.
+Interestingly, the WBO scans do all have similar profiles Figure @fig:sub_phenyl_qc_scan G).
+In this example, the urea is a more bulky functional group than the nitro and amino group in Figures @fig:sub_phenyl_qc_scan A and I.
+The red and grey molecules also have bulky groups at the meta position relative to the torsion being driven.
+This creates different steric clashes for the different molecules and changes their QC torsion profiles relative to each others.
 However, the conformation-dependant WBO scans have similar profiles for the molecules in the series because the non-local through-bond effects are similar for the molecules in this series.
 These WBO scans are not as anti-correlated to the QC scan as in the previous examples (-0.98, -0.99, -1.00 vs 0.7, -0.61, -0.97 and -0.67).
 The blue scan is actually correlated instead of being anti-correlated.
 Because while the electrons can conjugate when the torsion is in a planar position, the clashes of the proximal hydrogen and oxygen increase the energy.
 This small barrier at 0$^\circ$ does not exist in the grey and gold scan because the trimethylamonium is electron withdrawing, that the urea group can better conjugate with the phenyl ring and this stabilization is greater than the steric interactions.
 
-This series also shows an example of molecules that do not follow the trend shown in \cite{Stern2020} where increasing AM1 ELF10 WBO corresponds to increasing torsion barrier heights.
-The grey torsion scan (\FIG{example-scans} F) has torsion barrier heights that is ~15 kJ/mol greater than the gold torsion scan, while its AM1 ELF10 WBO is lower than the gold molecules (1.10 vs 1.11).
+This series also shows an example of molecules that do not follow the trend shown in Figure @fig:substituted_phenyls where increasing AM1 ELF10 WBO corresponds to increasing torsion barrier heights.
+The grey torsion scan (Figure @fig:sub_phenyl_qc_scan F) has torsion barrier heights that is ~15 kJ/mol greater than the gold torsion scan, while its AM1 ELF10 WBO is lower than the gold molecules (1.10 vs 1.11).
 This happens because the trimethylamonium is a bulky group at the meta position and it interacts with the carbonyl in the urea which causes the the barrier heights to increase.
-The scans shown here were taken from the subsituted phenyl set described in the previous chapter \cite{Stern2020}.
-I observed this trend of bulky groups on the meta position clashing in most other cases where the AM1 ELF10 WBOs did not follow the trend of increasing torsion barrier heights.
+We observed this trend of bulky groups on the meta position clashing in most other cases where the AM1 ELF10 WBOs did not follow the trend of increasing torsion barrier heights (SI Figures @fig:phenyl_td_1, @fig:phenyl_td_2, @fig:phenyl_td_3, @fig:phenyl_td_4, @fig:phenyl_td_5).
 
-\begin{figure}
-    \begin{centering}
-	\includegraphics[width=0.8\linewidth]{Figures/example-improper-angles.pdf}
-    \end{centering}
-	\caption[Improper torsion angles can be coupled with torsion angles being driven in torsion scans.]{\label{fig:improper-nitrogen}
-    {\bf Improper torsion angles can be coupled with the torsion angle being driven.}
-    Improper angles of pyramidal nitrogen involved in the torsion scan in \FIG{example-scans}, J. In the blue scan, the trivalent nitrogen is in a pyramidal conformation for the entire scan and the pyramid does not inter-convert. In the red scan, the trivalent nitrogen is also in a pyramidal conformation for the entire scan, but the pyramid does inter-convert. In the gold scan, the pyramidal nitrogen becomes planar at torsion angles 0$^\circ$ and 180$^\circ$ as the amino group conjugates with the phenyl.}
-\end{figure}
+![**Improper torsion angles can be coupled with torsion angles being driven in torsion scans.**
+Improper angles of pyramidal nitrogen involved in the torsion scan in Figure @fig:sub_phenyl_qc_scan, J.
+In the blue scan, the trivalent nitrogen is in a pyramidal conformation for the entire scan and the pyramid does not inter-convert.
+In the red scan, the trivalent nitrogen is also in a pyramidal conformation for the entire scan, but the pyramid does inter-convert.
+In the gold scan, the pyramidal nitrogen becomes planar at torsion angles 0$^\circ$ and 180$^\circ$ as the amino group conjugates with the phenyl.](images/example-improper-angles.svg){#fig:improper}
 
-Figures \FIG{example-scans} I-L show yet another series of torsion scans that exhibit different behaviors than both examples already discussed.
-In this example, QC torsion scans in \FIG{example-scans} J all have different profiles, specifically, the symmetry around zero is lost in the blue and red scan, albeit differently.
+Figures @fig:sub_phenyl_qc_scan I-L show yet another series of torsion scans that exhibit different behaviors than both examples already discussed.
+In this example, QC torsion scans in @fig:sub_phenyl_qc_scan J all have different profiles, specifically, the symmetry around zero is lost in the blue and red scan, albeit differently.
 The blue scan shifted such that the minima are not at 0$^\circ$ and 180$^\circ$ but the barrier heights are equivalent.
 In the red scan, one barrier is ~10 kJ/mol higher than the other.
-However, in these scans, the corresponding WBO scans are anti-correlated with the torsion scans (\FIG{example-scans}, L).
+However, in these scans, the corresponding WBO scans are anti-correlated with the torsion scans (Figure @fig:sub_phenyl_qc_scan, L).
 Because in these cases, these changes are due to changes in conjugation, not because of non-local steric interactions.
 All of these molecules contain a trivalent nitrogen that can assume both a pyramidal and planar conformation, depending on the amount of electron density in the lone pair.
-The more electron density there is in the lone pair, the greater the angle of the pyramidal nitrogen will be.
+The more electron density there is on the lone pair, the greater the angle of the pyramidal nitrogen will be.
 If the lone pairs conjugate with other $\pi$ electrons, the trivalent nitrogen adopts a planar conformation to accommodate conformation and because there is less electron density in the lone pair now that it is delocalized.
-\FIG{improper-nitrogen} shows how the angle of the trivalent nitrogen involved in the torsion changes over the course of the torsion scan.
+Figure @fig:improper shows how the angle of the trivalent nitrogen involved in the torsion changes over the course of the torsion scan.
 The blue scan, which corresponds with the molecule with a low AM1 ELF10 WBO relative to other bonds of the same torsion type (1.06), does not conjugate with the phenyl ring and remains in a pyramidal with an angle of ~ 35$^\circ$.
-This creates a chiral center which is reflected in the shift of the blue torsion scan in \FIG{example-scans} J and the loss of symmetry around zero.
-The red scan also which also corresponds to a molecule with a lower AM1 ELF10 WBO relative to other bonds with this torsion type (1.10), also does not conjugated and remains pyramidal throughout the entire scan.
+This creates a chiral center which is reflected in the shift of the blue torsion scan in Figure @fig:sub_phenyl_qc_scan J and the loss of symmetry around zero.
+The red scan which also corresponds to a molecule with a lower AM1 ELF10 WBO relative to other bonds with this torsion type (1.10), does not conjugated and remains pyramidal throughout the entire scan.
 However, in this scan, the chirality of the pyramidal nitrogen does flip, but then does not flip again at ~100$^\circ$ which can explain why the barrier heights are so different from one another.
 Lastly, the gold scan which corresponds to a molecule with a relatively high AM1 ELF10 WBO (1.24) does conjugate at a torsion angle of zero and the trivalent nitrogen becomes planar with an improper torsion angle of zero.
 
-The general trend I found when looking at other molecules in the subsituted phenyl set shared in \cite{Stern2020} was that when trivalent nitrogen were involved in a torsion scan, changes in the torsion profile relative to the same torsion type in different chemical environments, were due to changes in non-local through-bond effects.
+The general trend we found when looking at other molecules in the subsituted phenyl set (SI Figures @fig:phenyl_td_1, @fig:phenyl_td_2, @fig:phenyl_td_3, @fig:phenyl_td_4, @fig:phenyl_td_5) was that when trivalent nitrogen were involved in a torsion scan, changes in the torsion profile relative to the same torsion type in different chemical environments, were due to changes in non-local through-bond effects.
 These changes were also universally reflected in the corresponding WBO scans that remained anti-correlated with the QC scan.
 Specifically, torsions involving trivalent nitrogens with relatively lower AM1 ELF10 WBOs for the central bond, were more likely to exhibited such changes.
 In all cases where such changes were observed, the trivalent nitrogens did not form planar conformations at appropriate points in the scan to conjugate with the neighboring phenyl ring.
@@ -330,22 +334,13 @@ When the conformation-dependent WBO scans are strongly anti-correlated with QC s
 
 ### 2.4 Wiberg bond orders can be used to interpolate torsion parameters
 
+Outline for this section
+1. Find the difference potential of the substituted phenyl torsion scans between MM and QM without torison paramters
+2. Cluster on these profiles and create torsion SMARTS for them
+3. Interpolate torsion parameters using ELF10 WBOs
 
+Figures to add:
+1. Difference potentials clustered for similar profiles
+2. Table of SMARTS patterns for the different torsion types
+3. Figure showing MM torsion scans generated with interpolated torsion parameters.
 
-
-
-
-
-
-We show a representative series of torsion scan for the nitro functional group in figure {@fig:sub_phenyl_qc_scan}A. The torsion energy barrier height increased with increasing ELF10 WBO of the bond.
-In addition, {@fig:sub_phenyl_qc_scan}B  shows that the Wiberg-Lowdin bond orders are anti-correlated with the QC torsion scan which is the same result we saw for the initial biphenyl set discussed in the previous section.
-We also found that the linear relationship between WBOs and torsion energy barrier height shown in Figures @fig:biphenyls, E generalizes to the functional groups tested in this set (Figure {@fig:substituted_phenyls} C and D).
-However, some X~1~ we tested do not fully follow the trend so we separated the lines into Figure @fig:substituted_phenyls C for X~1~ that have lines with r^2^ > 0.7 and Figure @fig:substituted_phenyls D for X~1~ that have lines with r^2^ < 0.7.
-Table @tbl:stats lists the slopes and associated statistics for the fitted lines.
-
-For most functional groups, the change in WBOs correspond to changes in torsion barrier heights (SI Figures @fig:phenyl_td_1 - @fig:phenyl_td_5).
-However, for some functional groups, not only do the scales change, but the profile changes considerably as shown in Figure @fig:sub_phenyl_qc_scan, C (Urea).
-Interestingly, the Wiberg bond order scans do have the same profiles (Figure {@fig:sub_phenyl_qc_scan} D). These phenomena and the discrepancies observed in Figure @fig:substituted_phenyls D, are discussed in more detail in section 4.3 in the discussion.
-
-When we compare the standard deviations of WBO distributions with respect to conformation versus with respect to changes in chemical space (Figure @fig:standard_deviations, pink distribution), we find that the changes in ELF10 WBO for remote chemical environment changes are usually bigger than the changes in WBO that arise from change in conformation.
-This allows us to use the difference in ELF10 WBO of parent and fragment as a good surrogate to the level of disruption of the chemical environment.
