--- a/content/99.si.md
+++ b/content/99.si.md
@@ -2,32 +2,30 @@
 
 ### The Mayer bond order (MBO) extends the Wiberg bond order (WBO) to non-minimal basis sets
 
-The WBO was developed within Pople's complete neglect of differential overlap (CNDO) formalism \cite{Pople1965, Wiberg1968} and is defined as:
+The WBO was developed within Pople's complete neglect of differential overlap (CNDO) formalism [@doi:10.1063/1.1701475; @doi:10/fvwkkh] and is defined as:
 
 \begin{equation}
     W_{AB} = \sum_{\mu \in A}\sum_{\nu \in B} |D_{\mu \nu}|^2
-    \label{eq:wiberg}
-\end{equation}
+\end{equation}{#eq:wiberg}
 
 Where the quadradic sum of the electron density $D$ is over occupied orbitals $\mu$ and $\nu$ in atoms A and B in the bond.
 However, the WBO does not extend beyond semi-empirical methods where the overlap matrix is assumed to to be diagonal.
 At higher levels of QM theory where non-minimal basis sets are used, $W_{AB}$ would give values that increase in size with the basis sets so they need to normalized.
-In Psi4 \cite{Parrish2017}, The Löwdin normalization scheme \cite{Lowdin1950} is used to calculate the WBOs.
+In Psi4 [@doi:10.1021/acs.jctc.7b00174], The Löwdin normalization scheme [@doi:10.1063/1.1747632] is used to calculate the WBOs.
 In this scheme, the non-orthogonal basis set \bm{$\phi$} are transformed by a linear transformation \bm{$\phi$}' = $\bm{S}^{-\frac{1}{2}}\bm{\phi}$ Where \bm{$S$} is the the overlap matrix.
 
-Mayer \cite{Mayer2007} incorporates \bm{$S$} directly in the bond order calculation:
+Mayer [@doi:10.1002/jcc.20494] incorporates \bm{$S$} directly in the bond order calculation:
 
 \begin{equation}
     B_{AB} = \sum_{\mu \in A}\sum_{\nu \in B} (\bm{DS})_{\mu\nu} (\bm{DS})_{\nu\mu}
-    \label{eq:mayer}
-\end{equation}
+\end{equation}{#eq:mayer}
 
 Where $\bm{D}$ is the density matrix for occupied orbitals for closed shell systems, and $\bm{S}$ is the overlap matrix.
 This equation reduces to the WBO when orthonormalized basis sets are used.
 
 ### Comparing MBO and WBO at different levels of QC theory
 
-Psi4 \cite{Parrish2017} implements both Wiberg-Löwdin and Mayer bond orders.
+Psi4 [@doi:10.1021/acs.jctc.7b00174] implements both Wiberg-Löwdin and Mayer bond orders.
 Here we compare WBO and MBOs at different levels of theory.
 
 #### Differences in conformation-dependent bond order distributions between WBO and MBO at different levels of QC theory
